--- a/package.json
+++ b/package.json
@@ -4,16 +4,18 @@
   "description": "",
   "scripts": {
     "dev": "tsc --watch",
-    "stocks:save_share_prices": "NODE_ENV=dev node src/server/save_share_prices/index.js",
-    "stocks:check_difference_in_share_prices": "NODE_ENV=dev node src/server/check_difference_in_share_prices/index.js"
+    "stocks:save_share_prices": "NODE_ENV=dev node src/server/save_share_prices",
+    "stocks:check_difference_in_share_prices": "NODE_ENV=dev node src/server/check_difference_in_share_prices"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.21.1",
+    "dotenv": "^10.0.0",
     "forever": "^4.0.0",
     "fs": "0.0.1-security",
-    "node-cron": "^3.0.0"
+    "node-cron": "^3.0.0",
+    "node-telegram-bot-api": "^0.53.0"
   },
   "devDependencies": {
     "@types/node": "^15.12.2",
