--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "moex_api",
   "version": "1.0.0",
-  "description": "",
+  "description": "https://github.com/avdeevdenis/moex_api",
   "scripts": {
     "dev": "tsc --watch",
-    "stocks:save_share_prices": "NODE_ENV=dev node src/server/save_share_prices",
-    "stocks:check_difference_in_share_prices": "NODE_ENV=dev node src/server/check_difference_in_share_prices"
+    "stocks:save_share_prices": "NODE_ENV=dev node src/scripts_runner/save_share_prices",
+    "stocks:check_difference_in_share_prices": "NODE_ENV=dev node src/scripts_runner/check_difference_in_share_prices",
+    "stocks:save_share_prices_and_check_difference_in_share_prices": "NODE_ENV=dev node src/scripts_runner/save_share_prices_and_check_difference_in_share_prices"
   },
-  "author": "",
+  "author": "Avdeev Denis",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.21.1",
@@ -19,6 +20,7 @@
   },
   "devDependencies": {
     "@types/node": "^15.12.2",
+    "luxon": "^1.27.0",
     "ts-node": "^10.0.0",
     "typescript": "^4.3.2"
   }
