--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,13 @@
 {
     "compilerOptions": {
-        "allowJs": true,
-        "target": "ES5",
-        "noUnusedLocals": true,
-        "noUnusedParameters": true,
-        "skipLibCheck": true,
+        "baseUrl": "./",
+        "rootDir": ".",
+        "strictPropertyInitialization": false,
+        "declaration": false,
+        "moduleResolution": "node",
+        "emitDecoratorMetadata": true,
+        "experimentalDecorators": true,
+        "target": "es5",
     },
     "include": [
         "src/**/*.ts"
