--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "forever": "^4.0.0",
     "fs": "0.0.1-security",
     "node-cron": "^3.0.0",
+    "node-html-parser": "^4.1.2",
     "node-telegram-bot-api": "^0.53.0",
     "puppeteer": "^10.0.0"
   },
